# AlterLauncher

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
api/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_arch.xml  bg_version.xml  cat_tabs_pill_indicator.xml  ic_logo.xml  icon_background.xml
app/src/main/res/drawable-anydpi/: ic_action_about.xml  ic_action_download.xml  ic_action_launch.xml  ic_action_more.xml  ic_action_setting.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_crash.xml  activity_main.xml  activity_splash.xml  fragment_about.xml  fragment_download.xml  fragment_home.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
constants/: build.gradle.kts
core/: build.gradle.kts
cpp/: build.gradle.kts
cpp/src/main/cpp/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.h  dl_internal.h  main.cpp  main.h
cpp/src/main/cpp/android/: android_log.h
cpp/src/main/cpp/hook/: fake_asset.cpp  fake_asset.h  fake_dlopen.h  fake_file.cpp  fake_file.h  manager_minecraft.cpp  manager_minecraft.h  native_bridge.h
cpp/src/main/cpp/mcpe/client/: MinecraftGame.h
cpp/src/main/cpp/util/: FindSignature.cpp  FindSignature.h  NativeInvoker.cpp  NativeInvoker.h  Tag.cpp  Tag.h  Utils.cpp  Utils.h  fake_dlfcn.cpp  fake_dlfcn.h  stringUtil.cpp  stringUtil.h  tranceUtils.cpp  tranceUtils.h
gradle/: libs.versions.toml
stub/: build.gradle.kts
(+76 files in other folders)
